Feat Add sign up
Fix
Fix table for sign up.

--- a/src/pages/sdk/shared/use-sign-up.mdx
+++ b/src/pages/sdk/shared/use-sign-up.mdx
@@ -2,21 +2,21 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { Tables } from '@/components/Table'
 
-# `useSignIn`
+# `useSignUp`
 
-The `useSignIn` hook gives you access to the SignIn object, which allows you to check the current state of a sign in and sign in users with custom flows. 
+The `useSignUp` hook gives you access to the SignUp object, which allows you to check the current state of a sign up and sign up users with custom flows. 
 
 
 ## Usage
 
-#### Check ths current sign in status
+#### Check ths current sign up status
 
-```tsx copy filename="pages/index.tsx"
-import { useSignIn } from "@clerk/nextjs";
+```tsx copy filename="pages/sign-up.tsx"
+import { useSignUp } from "@clerk/nextjs";
 
-export default function SignInStep() {
-  const { isLoaded, signIn } = useSignIn();
-  
+export default function SignUpStep() {
+  const { isLoaded, signUp } = useSignUp();
+
   if (!isLoaded) {
     // handle loading state
     return null;
@@ -24,8 +24,8 @@ export default function SignInStep() {
   
   return (
     <div>
-      The current sign in attempt status 
-      is {signIn.status}.
+      The current sign up attempt status 
+      is {signUp.status}.
     </div>
   );
 }
@@ -33,28 +33,30 @@ export default function SignInStep() {
 
 #### Sign in a user with a custom flow
 
-```tsx copy filename="pages/signin.tsx"
+```tsx copy filename="pages/signup.tsx"
 import { useSignIn } from "@clerk/nextjs";
 import { useState } from "react";
 
-export default function SignIn() {
-  const [email, setEmail] = useState("");
-  const [password, setPassword] = useState("");
-
-  const { isLoaded, signIn, setActive } = useSignIn();
-
+export default function SignUp() {
+  const [emailAddress, setEmailAddress] = useState('');
+  const [password, setPassword] = useState('');
+  
+  const { isLoaded, signUp } = useSignUp();
+  
   if (!isLoaded) {
+    // handle loading state
     return null;
   }
-
+  
   async function submit(e) {
     e.preventDefault();
-    await signIn
-      .create({
-        identifier: email,
-        password,
-      })
-      .then((result) => {
+    // Check the sign up response to 
+    // decide what to do next.
+    await signUp.create({
+      emailAddress,
+      password,
+    })
+    .then((result) => {
         if (result.status === "complete") {
             console.log(result);
             setActive({session: result.createdSessionId});
@@ -65,15 +67,15 @@ export default function SignIn() {
       })
       .catch((err) => console.error("error", err.errors[0].longMessage));
   }
-
+  
   return (
     <form onSubmit={submit}>
       <div>
         <label htmlFor="email">Email</label>
-        <input
-          type="email"
-          value={email}
-          onChange={(e) => setEmail(e.target.value)}
+        <input 
+          type="email" 
+          value={emailAddress} 
+          onChange={e => setEmailAddress(e.target.value)} 
         />
       </div>
       <div>
@@ -81,11 +83,11 @@ export default function SignIn() {
         <input
           type="password"
           value={password}
-          onChange={(e) => setPassword(e.target.value)}
+          onChange={e => setPassword(e.target.value)}
         />
       </div>
       <div>
-        <button>Sign in</button>
+        <button>Sign up</button>
       </div>
     </form>
   );
@@ -103,6 +105,6 @@ export default function SignIn() {
       cells: ["setSession", "A function that sets the active session, this should"]
     },
     {
-      cells: ["signIn", "An object that contains the current sign in attempt status and methods to create a new sign in attempt."]
+      cells: ["signUp", "An object that contains the current sign up attempt status and methods to create a new sign up attempt."]
     },
   ]} />
