Fix middleware examples. Change to extending middleware

--- a/src/pages/quickstarts/next/next-beta.mdx
+++ b/src/pages/quickstarts/next/next-beta.mdx
@@ -120,7 +120,7 @@ export const config = { matcher: '/((?!.*\\.).*)' }
 
 Clerk offers two ways to protect your Next.js application, you can use Next.js Middleware or using our Control Components.
 
-<Tabs items={['Middleware Protection', 'Control Components']}>
+<Tabs items={['Extending Middleware', 'Control Components']}>
 <Tab>
 
 Using Middleware is the most comprehensive way to implement page protection in your app. Below is an example of page protection using Middleware.
