--- a/src/pages/quickstarts/next/next.mdx
+++ b/src/pages/quickstarts/next/next.mdx
@@ -105,7 +105,8 @@ export default withClerkMiddleware((req: NextRequest) => {
 });
 
 // Stop Middleware running on static files
-export const config = { matcher: '/((?!.*\\.).*)' }
+export const config = { matcher:  '/((?!_next/image|_next/static|favicon.ico).*)'};
+
 
 ```
 
@@ -113,12 +114,12 @@ export const config = { matcher: '/((?!.*\\.).*)' }
 
 Clerk offers two ways to protect your Next.js application, you can use Next.js Middleware or using our Control Components on the client side.
 
-<Tabs items={['Middleware Protection', 'Control Components']}>
+<Tabs items={['Extending Middleware', 'Control Components']}>
 <Tab>
 
 Using Middleware is the most comprehensive way to implement page protection in your app. Below is an example of page protection using Middleware.
 
-```tsx
+```tsx copy filename="middleware.ts"
 import { withClerkMiddleware, getAuth } from "@clerk/nextjs/server";
 import { NextResponse } from "next/server";
 import type { NextRequest } from "next/server";
@@ -149,7 +150,8 @@ export default withClerkMiddleware((request: NextRequest) => {
   return NextResponse.next();
 });
 
-export const config = { matcher: "/((?!.*\\.).*)" };
+export const config = { matcher:  '/((?!_next/image|_next/static|favicon.ico).*)'};
+
 
 ```
 </Tab>
