Fix up the guide

--- a/src/pages/quickstarts/next/next.mdx
+++ b/src/pages/quickstarts/next/next.mdx
@@ -1,7 +1,7 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import {YouTube} from "@/components/Youtube"
-
+import {Images} from "@/components/Images";
 
 # Use Clerk with Next.js
 
@@ -87,6 +87,13 @@ const SignUpPage = () => (
 );
 export default SignUpPage;
 ```
+
+### Update your dashboard settings
+
+To make sure you are using the embedded components you will need to update your instance settings in the [Clerk Dashboard](https://dashboard.clerk.dev) to use the embedded components.
+
+<Images src="/images/common/path-setting.png" width={1344} height={523} alt="Path setting Imagee"/>
+
 <Callout type="info" emoji="ℹ️">
 If you want to learn more about learn more about the prebuilt components check out our [Clerk Components documentation](/components/ui-components/sign-in).
 </Callout>
