--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,1 +1,24 @@
-# Clerk Docs Beta
+
+# Getting Started
+
+The Clerk beta docs are a work in progress and currently focused on Next.js and we will continue to convert the rest of the docs to this format.
+
+## Quickstart Guides
+
+- ### [Next.js](/quickstarts/next/next)
+- ### [Next.js App Router](/quickstarts/next/next-beta)
+
+## Components
+- ### [UI components](/components/ui-components/sign-in)
+- ### [Next.js App Router](/components/control-components/clerk-loaded)
+- ### [Organization Components ](/components/organization-components/create-organization)
+
+## SDKS
+- ### [Next.js](/sdk/next/with-clerk-middleware)
+- ### [Shared](/sdk/shared/use-user)
+
+
+## How to help?
+
+We are always looking for help with the docs. If you see something that needs to be fixed or added, please open an issue or submit a PR.
+
