Add examples and tabs for control components

--- a/src/pages/components/control-components/authenticate-with-callback.mdx
+++ b/src/pages/components/control-components/authenticate-with-callback.mdx
@@ -1,4 +1,5 @@
 import { Tables } from '@/components/Table'
+import { Tab, Tabs } from "nextra-theme-docs";
 
 # `<AuthenticateWithRedirectCallback />`
 ---
@@ -7,6 +8,76 @@ The `<AuthenticateWithRedirectCallback/>` is used to complete a custom OAuth flo
 
 ## Usage
 
+
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+
+<Tab>
+This example below uses built in Next.js pages, but you could use any routing library you want. 
+
+
+```tsx copy filename="app.tsx"
+import '@/styles/globals.css'
+import {
+  ClerkProvider,
+  SignedIn,
+  SignedOut,
+  useSignIn,
+} from "@clerk/nextjs";
+import { AppProps } from "next/app";
+import { useRouter } from "next/router";
+
+const publicPages: Array<string> = [];
+
+const SignInOAuthButtons = () => {
+  const { signIn, isLoaded } = useSignIn();
+  if (!isLoaded) {
+    return null;
+  }
+  const signInWithGoogle = () =>
+    signIn.authenticateWithRedirect({
+      strategy: "oauth_google",
+      redirectUrl: "/sso-callback",
+      redirectUrlComplete: "/",
+    });
+  return <button onClick={signInWithGoogle}>Sign in with Google</button>;
+}
+function MyApp({ Component, pageProps }: AppProps) {
+  const { pathname } = useRouter();
+  const isPublicPage = publicPages.includes(pathname);
+  
+  return (
+    <ClerkProvider {...pageProps}>
+      {isPublicPage ? (
+        <Component {...pageProps} />
+      ) : (
+        <>
+          <SignedIn>
+            <Component {...pageProps} />
+          </SignedIn>
+          <SignedOut>
+           <SignInOAuthButtons />
+          </SignedOut>
+        </>
+      )}
+    </ClerkProvider>
+  );
+}
+ 
+export default MyApp;
+```
+Once you have implemented your sign in flow, you can implement the callback page.
+
+```tsx copy filename="/pages/sso-callback.tsx"
+import { AuthenticateWithRedirectCallback } from "@clerk/nextjs";
+
+export default function SSOCallBack() {
+  return (
+   <AuthenticateWithRedirectCallback />
+  )
+}
+```
+</Tab>
+<Tab>
 This example below is using the `react-router-dom` library. You can use any routing library you want. 
 
 ```tsx copy filename="app.tsx"
@@ -66,19 +137,21 @@ function SignInOAuthButtons() {
 export default App;
 
 ```
+</Tab>
+</Tabs>
 ## Props
 
-<Tables headings={["Name", "Type","Optional", "Description"]} rows={[
+<Tables headings={["Name", "Type","Description"]} rows={[
     {
-      cells: ["afterSignInUrl", "string", "✅", "Full URL or path to navigate after successful sign in."]
+      cells: ["afterSignInUrl", "string","Full URL or path to navigate after successful sign in."]
     },
     {
-      cells: ["afterSignUpUrl", "string", "✅", "Full URL or path to navigate after successful sign up."]
+      cells: ["afterSignUpUrl", "string","Full URL or path to navigate after successful sign up."]
     },
     {
-      cells: ["redirectUrl", "string", "✅", "Full URL or path to navigate after successful sign in or sign up. \n\n This is the same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value."]
+      cells: ["redirectUrl", "string", "Full URL or path to navigate after successful sign in or sign up. \n\n This is the same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value."]
     },
     {
-      cells: ["secondFactorUrl", "string", "✅  ", "Full URL or path to navigate during sign in, if 2FA is enabled."]
+      cells: ["secondFactorUrl", "string", "Full URL or path to navigate during sign in, if 2FA is enabled."]
     },
   ]} />
