--- a/src/pages/components/control-components/clerk-loaded.mdx
+++ b/src/pages/components/control-components/clerk-loaded.mdx
@@ -1,11 +1,48 @@
 import { Callout } from "nextra-theme-docs";
+import { Tab, Tabs } from "nextra-theme-docs";
 
 # `<ClerkLoaded>`
 ---
 The `<ClerkLoaded>` component guarantees that the Clerk object has loaded and will be available under `window.Clerk`, this allows you to wrap child components to access the Clerk object without the need to check it exists.
 
 ## Usage
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tab>
+```jsx copy filename="pages/_app.tsx"
+import "@/styles/globals.css";
+import { ClerkLoaded, ClerkProvider } from "@clerk/nextjs";
+import { AppProps } from "next/app";
 
+function MyApp({ Component, pageProps }: AppProps) {
+  return (
+    <ClerkProvider {...pageProps}>
+      <ClerkLoaded>
+        <Component {...pageProps} />
+      </ClerkLoaded>
+    </ClerkProvider>
+  );
+}
+
+export default MyApp;
+```
+
+Once you have wrapped your app with `<ClerkLoaded>` you can access the Clerk object without the need to check if it exists.
+
+```jsx copy filename="pages/index.tsx"
+declare global {
+  interface Window {
+    Clerk: any;
+  }
+}
+
+export default function Home() { 
+  return (
+    <div>This page uses Clerk {window.Clerk.version}; </div>
+  );
+}
+```  
+</Tab>
+<Tab>
 ```jsx copy filename="app.tsx"
 import { useEffect } from "react";
 import { ClerkLoaded, ClerkProvider } from "@clerk/clerk-react";
@@ -40,3 +77,5 @@ function Page() {
 
 export default App;
 ```
+</Tab>
+</Tabs>
