--- a/src/pages/components/control-components/clerk-loading.mdx
+++ b/src/pages/components/control-components/clerk-loading.mdx
@@ -1,8 +1,36 @@
+import { Callout } from "nextra-theme-docs";
+import { Tab, Tabs } from "nextra-theme-docs";
+
 # `<ClerkLoading>`
----
+
 The `<ClerkLoading>` renders its children while Clerk is loading, and is helpful for showing a custom loading state.
 
 ## Usage 
+
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tab>
+```jsx copy filename="pages/_app.tsx"
+import "@/styles/globals.css";
+import { ClerkLoaded, ClerkLoading,ClerkProvider } from "@clerk/nextjs";
+import { AppProps } from "next/app";
+
+function MyApp({ Component, pageProps }: AppProps) {
+  return (
+    <ClerkProvider {...pageProps}>
+      <ClerkLoading>
+        <div>Clerk is loading</div>
+      </ClerkLoading>
+      <ClerkLoaded>
+        <Component {...pageProps} />
+      </ClerkLoaded>
+    </ClerkProvider>
+  );
+}
+
+export default MyApp;
+```
+</Tab>
+<Tab>
 
 ```jsx copy filename="app.tsx"
 import { ClerkLoaded, ClerkLoading, ClerkProvider } from "@clerk/clerk-react";
@@ -29,3 +57,5 @@ function Page() {
 
 export default App;
 ```
+</Tab>
+</Tabs>
