--- a/src/pages/components/control-components/signed-out.mdx
+++ b/src/pages/components/control-components/signed-out.mdx
@@ -1,10 +1,38 @@
+import { Callout } from "nextra-theme-docs";
+import { Tab, Tabs } from "nextra-theme-docs";
+
 # `<SignedOut>`
 
 The `<SignedOut/>` component offers authentication checks as a cross-cutting concern. Any child nodes wrapped by a `<SignedOut/>` component will be rendered only if there's no User signed in to your application.
 
 ## Usage
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tab>
 ```jsx copy filename="app.tsx"
+import "@/styles/globals.css";
+import {
+  ClerkProvider,
+  RedirectToSignIn,
+  SignedOut,
+} from "@clerk/nextjs";
+import { AppProps } from "next/app";
 
+function MyApp({ Component, pageProps }: AppProps) {
+  return (
+    <ClerkProvider {...pageProps}>
+      <SignedOut>
+        <div>You are signed Out</div>
+      </SignedOut>
+      <div>Always visible</div>
+    </ClerkProvider>
+  );
+}
+
+export default MyApp;
+```
+</Tab>
+<Tab>
+```jsx copy filename="app.tsx"
 import { SignedOut, ClerkProvider } from "@clerk/clerk-react";
 
 function Page() {
@@ -30,7 +58,6 @@ function Page() {
 Below is an example of how to use `<SignedOut/>` with React Router. The `<SignedOut/>` component can be used as a child of a `<Route/>` component to render content only to signed in users.
 
 ```jsx copy filename="app.tsx"
-
 import { Routes, Route } from 'react-router-dom';
 import { 
   ClerkProvider,
@@ -59,4 +86,5 @@ function App() {
   );
 }
 ```
-
+</Tab>
+</Tabs>
