--- a/src/pages/components/control-components/multi-session.mdx
+++ b/src/pages/components/control-components/multi-session.mdx
@@ -1,13 +1,34 @@
-import { Tables } from '@/components/Table'
+import { Callout } from "nextra-theme-docs";
+import { Tab, Tabs } from "nextra-theme-docs";
 
 # `<MultisessionAppSupport>`
 ---
-The `<MultisessionAppSupport>` provides a wrapper for your React application that guarantees a full rerendering cycle everytime the current session and user changes. The `<MultisessionAppSupport>` should live under the `<ClerkProvider/>` and wrap your React application.
+The `<MultisessionAppSupport>` provides a wrapper for your React application that guarantees a full rerendering cycle everytime the current session and user changes.
 
 ## Usage
 
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tab>
+```jsx copy filename="pages/_app.tsx"
+import "@/styles/globals.css";
+import { MultisessionAppSupport,ClerkProvider } from "@clerk/nextjs";
+import { AppProps } from "next/app";
+
+function MyApp({ Component, pageProps }: AppProps) {
+  return (
+    <ClerkProvider {...pageProps}>
+      <MultisessionAppSupport>
+        <Component {...pageProps} />
+      </MultisessionAppSupport>
+    </ClerkProvider>
+  );
+}
+
+export default MyApp;
+```
+</Tab>
+<Tab>
 ```jsx copy filename="app.tsx"
-import { useEffect } from "react";
 import { ClerkProvider, MultisessionAppSupport } from "@clerk/clerk-react";
 
 function App() {
@@ -21,15 +42,10 @@ function App() {
 }
 
 function Page() {
-  useEffect(() => {
-    // No need to check if the 
-    // Clerk object exists.
-    document.title = "This page uses Clerk " + 
-      document.window.Clerk.version;
-  }, []);
-  
   return (
     <div>The content</div>
   );
 }
 ```
+</Tab>
+</Tabs>
