--- a/src/pages/components/control-components/signed-in.mdx
+++ b/src/pages/components/control-components/signed-in.mdx
@@ -1,11 +1,40 @@
+import { Callout } from "nextra-theme-docs";
+import { Tab, Tabs } from "nextra-theme-docs";
+
 # `<SignedIn>`
 
 ## Overview
 The `<SignedIn/>` component offers authentication checks as a cross-cutting concern. Any children components wrapped by a `<SignedIn/>` component will be rendered only if there's a User with an active Session signed in your application. 
 
 ## Usage
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tab>
 ```jsx copy filename="app.tsx"
+import "@/styles/globals.css";
+import {
+  ClerkProvider,
+  RedirectToSignIn,
+  SignedIn,
+} from "@clerk/nextjs";
+import { AppProps } from "next/app";
 
+function MyApp({ Component, pageProps }: AppProps) {
+  return (
+    <ClerkProvider {...pageProps}>
+      <SignedIn>
+        <div>You are signed in</div>
+      </SignedIn>
+      <div>Always visible</div>
+    </ClerkProvider>
+  );
+}
+
+export default MyApp;
+
+```
+</Tab>
+<Tab>
+```jsx copy filename="app.tsx"
 import { SignedIn, ClerkProvider } from "@clerk/clerk-react";
 
 function Page() {
@@ -26,13 +55,14 @@ function Page() {
   );
 }
 ```
+</Tab>
+</Tabs>
 
 ### Usage with React Router
 
 Below is an example of how to use `<SignedIn/>` with React Router. The `<SignedIn/>` component can be used as a child of a `<Route/>` component to render content only to signed in users.
 
 ```jsx copy filename="app.tsx"
-
 import { Routes, Route } from 'react-router-dom';
 import { 
   ClerkProvider,
