Fix all the tabs.

--- a/src/pages/components/organization-components/create-organization.mdx
+++ b/src/pages/components/organization-components/create-organization.mdx
@@ -10,7 +10,8 @@ import {Images} from "@/components/Images";
 The `<CreateOrganization/>` component is used to render an organization creation UI that allows users to create brand new organizations within you application.
 
 ## Usage
-
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tab>
 ```jsx copy filename="/pages/create-organization/[[...index]].tsx"
 import { CreateOrganization } from "@clerk/nextjs";
 
@@ -18,7 +19,8 @@ export default function CreateOrganizationPage() {
   return <CreateOrganization />;
 }
 ```
-
+</Tab>
+</Tabs>
 ## Props
 
 <Tables
