--- a/src/pages/components/organization-components/organization-profile.mdx
+++ b/src/pages/components/organization-components/organization-profile.mdx
@@ -10,7 +10,8 @@ import {Images} from "@/components/Images";
 The `<OrganizationProfile/>` component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
 
 ## Usage
-
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tab>
 ```jsx copy filename="/pages/organization-profile/[[...index]].tsx"
 import { OrganizationProfile } from "@clerk/nextjs";
 
@@ -18,7 +19,8 @@ export default function OrganizationProfilePage() {
   return <OrganizationProfile />;
 }
 ```
-
+</Tab>
+</Tabs>
 ## Props
 
 <Tables
