--- a/src/pages/components/organization-components/organization-switcher.mdx
+++ b/src/pages/components/organization-components/organization-switcher.mdx
@@ -10,7 +10,8 @@ import {Images} from "@/components/Images";
 The `<OrganizationSwitcher/>` component is used to enable the ability to switch between available organizations the user may be part of in your application.
 
 ## Usage
-
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tab>
 ```jsx copy filename="/pages/organization-switcher/[[...index]].tsx"
 import { OrganizationSwitcher } from "@clerk/nextjs";
 
@@ -22,7 +23,8 @@ export default function OrganizationSwitcherPage() {
   );
 }
 ```
-
+</Tab>
+</Tabs>
 ## Props
 
 <Tables
