--- a/src/pages/components/ui-components/user-profile.mdx
+++ b/src/pages/components/ui-components/user-profile.mdx
@@ -9,7 +9,8 @@ import { Images } from "@/components/Images";
 The `<UserProfile/>` component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings. 
 
 ## Usage
-
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tab>
 Using the [Next.js optional catch all route](https://nextjs.org/docs/routing/dynamic-routes#optional-catch-all-routes), you can embed the `<UserProfile/>` component. This allows you to redirect the user inside your application and handle any redirects.
 
 ```jsx copy filename="/pages/user-profile/[[...index]].tsx"
@@ -21,6 +22,8 @@ const UserProfilePage = () => (
 
 export default UserProfilePage;
 ```
+</Tab>
+</Tabs>
 
 ## Props
 
