--- a/src/pages/sdk/shared/use-auth.mdx
+++ b/src/pages/sdk/shared/use-auth.mdx
@@ -7,7 +7,7 @@ import { Tables } from '@/components/Table'
 The `useAuth` hook provides lightweight access to the current auth state, helpers to manage the state and load data from external sources.
 ## Usage 
 
-<Tabs items={['Next.js']} defaultIndex="1" >
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 ```tsx copy filename="pages/index.tsx"
 import { useAuth } from '@clerk/nextjs';
