--- a/src/pages/sdk/shared/use-clerk.mdx
+++ b/src/pages/sdk/shared/use-clerk.mdx
@@ -12,7 +12,7 @@ This is intended to be used for advanced use cases, like building a completely c
 
 ## Usage 
 
-<Tabs items={['Next.js']} defaultIndex="1" >
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 ```tsx copy filename="pages/index.tsx"
 import { useClerk } from "@clerk/nextjs";
