--- a/src/pages/sdk/shared/use-session-list.mdx
+++ b/src/pages/sdk/shared/use-session-list.mdx
@@ -8,7 +8,7 @@ The `useSessionList` hook provides returns an array of Session objects that have
 
 ## Usage 
 
-<Tabs items={['Next.js']} defaultIndex="1" >
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 ```tsx copy filename="pages/index.tsx"
 import { useSessionList } from "@clerk/nextjs";
