--- a/src/pages/sdk/shared/use-session.mdx
+++ b/src/pages/sdk/shared/use-session.mdx
@@ -8,7 +8,7 @@ The `useSession` hook provides access to the the current user Session object, an
 
 ## Usage 
 
-<Tabs items={['Next.js']} defaultIndex="1" >
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 ```tsx copy filename="pages/index.tsx"
 import { useSession } from "@clerk/nextjs";
