--- a/src/pages/sdk/shared/use-sign-up.mdx
+++ b/src/pages/sdk/shared/use-sign-up.mdx
@@ -8,8 +8,9 @@ The `useSignUp` hook gives you access to the SignUp object, which allows you to 
 
 
 ## Usage
-
-#### Check ths current sign up status
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tab>
+#### Check the current sign up status
 
 ```tsx copy filename="pages/sign-up.tsx"
 import { useSignUp } from "@clerk/nextjs";
@@ -93,7 +94,8 @@ export default function SignUp() {
   );
 }
 ```
-
+</Tab>
+</Tabs>
 <Tables headings={["Variables", "Description"]} rows={[
     {
       cells: ["isLoaded", "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true"]
