--- a/src/pages/sdk/shared/use-user.mdx
+++ b/src/pages/sdk/shared/use-user.mdx
@@ -8,7 +8,7 @@ The `useUser` hook is used to get the current user object and to update the user
 
 ## Usage
 
-<Tabs items={['Next.js']} defaultIndex="1" >
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 ```tsx copy filename="pages/index.tsx"
 import { useUser } from "@clerk/nextjs";
