--- a/src/pages/components/ui-components/user-button.mdx
+++ b/src/pages/components/ui-components/user-button.mdx
@@ -10,7 +10,8 @@ import {Images} from '@/components/Images'
 The `<UserButton/>` component is used to render the familiar user button UI popularized by Google.
 
 ## Usage
-
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tab>
 ```jsx copy filename="userButtonExample.tsx"
 import {
   ClerkProvider,
@@ -48,9 +49,11 @@ function MyApp({ pageProps }) {
 
 export default MyApp;
 ```
+</Tab>
+</Tabs>
 
 ## Props
-All Props below are optional.
+
 <Tables
   headings={["Name", "Type", "Description"]}
   rows={[
