--- a/src/pages/sdk/shared/use-sign-in.mdx
+++ b/src/pages/sdk/shared/use-sign-in.mdx
@@ -8,8 +8,10 @@ The `useSignIn` hook gives you access to the SignIn object, which allows you to 
 
 
 ## Usage
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tab>
+#### Check the current sign in status
 
-#### Check ths current sign in status
 
 ```tsx copy filename="pages/index.tsx"
 import { useSignIn } from "@clerk/nextjs";
@@ -91,7 +93,8 @@ export default function SignIn() {
   );
 }
 ```
-
+</Tab>
+</Tabs>
 <Tables headings={["Variables", "Description"]} rows={[
     {
       cells: ["isLoaded", "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true"]
