push up the links at the end.

--- a/src/pages/quickstarts/next/next-beta.mdx
+++ b/src/pages/quickstarts/next/next-beta.mdx
@@ -321,6 +321,5 @@ export default function Page() {
 
 Now you have an application integrated with Clerk you will want to read the following documentation:
 
-- Server-side APIs
-- Client side helpers
-- Alternative Backends
+- [Server-side Helpers](/sdk/next/get-auth)
+- [Client side helpers](/sdk/shared/use-auth)
