--- a/src/pages/quickstarts/next/next.mdx
+++ b/src/pages/quickstarts/next/next.mdx
@@ -354,6 +354,5 @@ export const getServerSideProps: GetServerSideProps = async ctx => {
 
 Now you have an application integrated with Clerk you will want to read the following documentation:
 
-- Server-side APIs
-- Client side helpers
-- Alternative Backends
+- [Server-side Helpers](/sdk/next/get-auth)
+- [Client side helpers](/sdk/shared/use-auth)
