--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,8 +8,8 @@ The Clerk beta docs are a work in progress and currently focused on Next.js and 
 - ### [Next.js App Router](/quickstarts/next/next-beta)
 
 ## Components
-- ### [UI components](/components/ui-components/sign-in)
-- ### [Next.js App Router](/components/control-components/clerk-loaded)
+- ### [UI Components](/components/ui-components/sign-in)
+- ### [Control Components](/components/control-components/clerk-loaded)
 - ### [Organization Components ](/components/organization-components/create-organization)
 
 ## SDKS
