--- a/src/pages/quickstarts.mdx
+++ b/src/pages/quickstarts.mdx
@@ -2,5 +2,5 @@
 
 Our quickstart guides are designed to help you get started with Clerk and understand the core concepts. 
 
-### [Quickstart Guide for the Next.js Stable](docs/quickstarts/next/next)
-### [Quickstart Guide for the Next.js App Router Beta](docs/quickstarts/next/next-beta)
+### [Quickstart Guide for the Next.js Stable](/quickstarts/next/next)
+### [Quickstart Guide for the Next.js App Router Beta](/quickstarts/next/next-beta)
