--- a/src/pages/components/authentication/user-profile.mdx
+++ b/src/pages/components/authentication/user-profile.mdx
@@ -23,6 +23,17 @@ const UserProfilePage = () => (
 export default UserProfilePage;
 ```
 </Tab>
+<Tab>
+```jsx copy filename="/user-profile.tsx"
+import { UserProfile } from "@clerk/clerk-react";
+
+const UserProfilePage = () => (
+  <UserProfile path="/user-profile" routing="path" />
+);
+
+export default UserProfilePage;
+```
+</Tab>
 </Tabs>
 
 ## Props
