--- a/src/pages/components/organization-management/create-organization.mdx
+++ b/src/pages/components/organization-management/create-organization.mdx
@@ -20,6 +20,15 @@ export default function CreateOrganizationPage() {
 }
 ```
 </Tab>
+<Tab>
+```jsx copy filename="/create-organization.tsx"
+import { CreateOrganization } from "@clerk/clerk-react";
+
+export default function CreateOrganizationPage() {
+  return <CreateOrganization />;
+}
+```
+</Tab>
 </Tabs>
 ## Props
 
