--- a/src/pages/components/organization-management/organization-profile.mdx
+++ b/src/pages/components/organization-management/organization-profile.mdx
@@ -20,6 +20,15 @@ export default function OrganizationProfilePage() {
 }
 ```
 </Tab>
+<Tab>
+```jsx copy filename="organization-profile.tsx"
+import { OrganizationProfile } from "@clerk/clerk-react";
+
+export default function OrganizationProfilePage() {
+  return <OrganizationProfile />;
+}
+```
+</Tab>
 </Tabs>
 ## Props
 
