--- a/src/pages/hooks/authentication/use-sign-in.mdx
+++ b/src/pages/hooks/authentication/use-sign-in.mdx
@@ -94,6 +94,91 @@ export default function SignIn() {
 }
 ```
 </Tab>
+<Tab>
+#### Check the current sign in status
+
+
+```tsx copy filename="pages/sign-in-step.tsx"
+import { useSignIn } from "@clerk/clerk-react";
+
+export default function SignInStep() {
+  const { isLoaded, signIn } = useSignIn();
+  
+  if (!isLoaded) {
+    // handle loading state
+    return null;
+  }
+  
+  return (
+    <div>
+      The current sign in attempt status 
+      is {signIn.status}.
+    </div>
+  );
+}
+```
+
+#### Sign in a user with a custom flow
+
+```tsx copy filename="pages/signin.tsx"
+import { useSignIn } from "@clerk/clerk-react";
+import { useState } from "react";
+
+export default function SignIn() {
+  const [email, setEmail] = useState("");
+  const [password, setPassword] = useState("");
+
+  const { isLoaded, signIn, setActive } = useSignIn();
+
+  if (!isLoaded) {
+    return null;
+  }
+
+  async function submit(e) {
+    e.preventDefault();
+    await signIn
+      .create({
+        identifier: email,
+        password,
+      })
+      .then((result) => {
+        if (result.status === "complete") {
+            console.log(result);
+            setActive({session: result.createdSessionId});
+        }
+        else{
+            console.log(result);
+        }
+      })
+      .catch((err) => console.error("error", err.errors[0].longMessage));
+  }
+
+  return (
+    <form onSubmit={submit}>
+      <div>
+        <label htmlFor="email">Email</label>
+        <input
+          type="email"
+          value={email}
+          onChange={(e) => setEmail(e.target.value)}
+        />
+      </div>
+      <div>
+        <label htmlFor="password">Password</label>
+        <input
+          type="password"
+          value={password}
+          onChange={(e) => setPassword(e.target.value)}
+        />
+      </div>
+      <div>
+        <button>Sign in</button>
+      </div>
+    </form>
+  );
+}
+```
+</Tab>
 </Tabs>
 <Tables headings={["Variables", "Description"]} rows={[
     {
