--- a/src/pages/hooks/user-management/use-auth.mdx
+++ b/src/pages/hooks/user-management/use-auth.mdx
@@ -11,7 +11,6 @@ The `useAuth` hook provides lightweight access to the current auth state, helper
 <Tab>
 ```tsx copy filename="pages/index.tsx"
 import { useAuth } from '@clerk/nextjs';
-import { supabase } from './supabaseClient';
 
 export default function ExternalDataPage() {
   const { getToken, isLoaded, isSignedIn } = useAuth();
@@ -23,6 +22,30 @@ export default function ExternalDataPage() {
   
   const fetchDataFromExternalResource = async () => {
     const token = await getToken();
+    // fetch your data
+    return data;
+  }
+  
+  return <div>...</div>;
+}
+
+```
+</Tab>
+<Tab>
+```tsx copy filename="external-data-page.tsx"
+import { useAuth } from '@clerk/clerk-react';
+
+export default function ExternalDataPage() {
+  const { getToken, isLoaded, isSignedIn } = useAuth();
+  
+  if (!isLoaded || !isSignedIn) {
+    // You can handle the loading or signed state separately
+    return null;
+  }
+  
+  const fetchDataFromExternalResource = async () => {
+    const token = await getToken();
+    // fetch your data
     return data;
   }
   
