--- a/src/pages/hooks/user-management/use-session.mdx
+++ b/src/pages/hooks/user-management/use-session.mdx
@@ -35,6 +35,32 @@ export default function Home() {
 }
 ```
 </Tab>
+<Tab>
+```tsx copy filename="home.tsx"
+import { useSession } from "@clerk/clerk-react";
+
+export default function Home() {
+  const { isLoaded, session,isSignedIn } = useSession();
+  
+  if (!isLoaded) {
+    // handle loading state
+    return null;
+  }
+  if(!isSignedIn) {
+    // handle not signed in state
+    return null;
+  }
+  
+  return (
+    <div> 
+      <p>This session has been active 
+      since {session.lastActiveAt.toLocaleString()}
+      </p>
+    </div>
+  )
+}
+```
+</Tab>
 </Tabs>
 
 <Tables headings={["Variables", "Description"]} rows={[
