--- a/src/pages/components/organization-management/organization-switcher.mdx
+++ b/src/pages/components/organization-management/organization-switcher.mdx
@@ -24,6 +24,19 @@ export default function OrganizationSwitcherPage() {
 }
 ```
 </Tab>
+<Tab>
+```jsx copy filename="organization-switcher.tsx"
+import { OrganizationSwitcher } from "@clerk/clerk-react";
+
+export default function OrganizationSwitcherPage() {
+  return (
+    <div>
+      <OrganizationSwitcher />
+    </div>
+  );
+}
+```
+</Tab>
 </Tabs>
 ## Props
 
