--- a/src/pages/hooks/authentication/use-sign-up.mdx
+++ b/src/pages/hooks/authentication/use-sign-up.mdx
@@ -35,7 +35,93 @@ export default function SignUpStep() {
 #### Sign in a user with a custom flow
 
 ```tsx copy filename="pages/signup.tsx"
-import { useSignIn } from "@clerk/nextjs";
+import { useSignUp } from "@clerk/nextjs";
+import { useState } from "react";
+
+export default function SignUp() {
+  const [emailAddress, setEmailAddress] = useState('');
+  const [password, setPassword] = useState('');
+  
+  const { isLoaded, signUp } = useSignUp();
+  
+  if (!isLoaded) {
+    // handle loading state
+    return null;
+  }
+  
+  async function submit(e) {
+    e.preventDefault();
+    // Check the sign up response to 
+    // decide what to do next.
+    await signUp.create({
+      emailAddress,
+      password,
+    })
+    .then((result) => {
+        if (result.status === "complete") {
+            console.log(result);
+            setActive({session: result.createdSessionId});
+        }
+        else{
+            console.log(result);
+        }
+      })
+      .catch((err) => console.error("error", err.errors[0].longMessage));
+  }
+  
+  return (
+    <form onSubmit={submit}>
+      <div>
+        <label htmlFor="email">Email</label>
+        <input 
+          type="email" 
+          value={emailAddress} 
+          onChange={e => setEmailAddress(e.target.value)} 
+        />
+      </div>
+      <div>
+        <label htmlFor="password">Password</label>
+        <input
+          type="password"
+          value={password}
+          onChange={e => setPassword(e.target.value)}
+        />
+      </div>
+      <div>
+        <button>Sign up</button>
+      </div>
+    </form>
+  );
+}
+```
+</Tab>
+<Tab>
+#### Check the current sign up status
+
+```tsx copy filename="sign-up-step.tsx"
+import { useSignUp } from "@clerk/clerk-react";
+
+export default function SignUpStep() {
+  const { isLoaded, signUp } = useSignUp();
+
+  if (!isLoaded) {
+    // handle loading state
+    return null;
+  }
+  
+  return (
+    <div>
+      The current sign up attempt status 
+      is {signUp.status}.
+    </div>
+  );
+}
+```
+
+#### Sign in a user with a custom flow
+
+```tsx copy filename="signup.tsx"
+import { useSignUp } from "@clerk/clerk-react";
 import { useState } from "react";
 
 export default function SignUp() {
