--- a/src/pages/hooks/user-management/use-session-list.mdx
+++ b/src/pages/hooks/user-management/use-session-list.mdx
@@ -30,6 +30,27 @@ export default function Home() {
 }
 ```
 </Tab>
+<Tab>
+```tsx copy filename="home.tsx"
+import { useSessionList } from "@clerk/clerk-react";
+
+export default function Home() {
+  const { isLoaded, sessions} = useSessionList();
+  
+  if (!isLoaded) {
+    // handle loading state
+    return null;
+  }  
+  return (
+    <div> 
+      <p>Welcome back. You've been here 
+      {sessions.length} times before.
+      </p>
+    </div>
+  )
+}
+```
+</Tab>
 </Tabs>
 
 
