--- a/src/pages/sdk/shared/use-auth.mdx
+++ b/src/pages/sdk/shared/use-auth.mdx
@@ -11,7 +11,6 @@ The `useAuth` hook provides lightweight access to the current auth state, helper
 <Tab>
 ```tsx copy filename="pages/index.tsx"
 import { useAuth } from '@clerk/nextjs';
-import { supabase } from './supabaseClient';
 
 export default function ExternalDataPage() {
   const { getToken, isLoaded, isSignedIn } = useAuth();
@@ -20,15 +19,36 @@ export default function ExternalDataPage() {
     // You can handle the loading or signed state separately
     return null;
   }
-  
+
   const fetchDataFromExternalResource = async () => {
     const token = await getToken();
+    // Use the token to fetch data from an external resource
     return data;
   }
-  
   return <div>...</div>;
 }
 
+```
+</Tab>
+<Tab>
+```tsx copy filename="externalData.tsx"
+import { useAuth } from '@clerk/clerk-react';
+
+export default function ExternalDataPage() {
+  const { getToken, isLoaded, isSignedIn } = useAuth();
+  
+  if (!isLoaded || !isSignedIn) {
+    // You can handle the loading or signed state separately
+    return null;
+  }
+
+  const fetchDataFromExternalResource = async () => {
+    const token = await getToken();
+    // Use the token to fetch data from an external resource
+    return data;
+  }
+  return <div>...</div>;
+}
 ```
 </Tab>
 </Tabs>
