--- a/src/pages/sdk/shared/use-clerk.mdx
+++ b/src/pages/sdk/shared/use-clerk.mdx
@@ -24,4 +24,15 @@ export default function Home() {
 }
 ```
 </Tab>
+<Tab>
+```tsx copy filename="home.tsx"
+import { useClerk } from "@clerk/clerk-react";
+
+export default function Home() {
+  const clerk = useClerk();
+
+  return <button onClick={() => clerk.openSignIn({})}>Sign in</button>;
+}
+```
+</Tab>
 </Tabs>
