--- a/src/pages/sdk/shared/use-user.mdx
+++ b/src/pages/sdk/shared/use-user.mdx
@@ -29,6 +29,26 @@ return <div>Not signed in</div>;
 
 ```
 </Tab>
+<Tab>
+```tsx copy filename="home.tsx"
+import { useUser } from "@clerk/clerk-react";
+
+export default function Home() {
+  const { isSignedIn, user, isLoaded } = useUser();
+
+if (!isLoaded) {
+return null;
+}
+
+if (isSignedIn) {
+return <div>Hello {user.fullName}!</div>;
+}
+
+return <div>Not signed in</div>;
+}
+
+```
+</Tab>
 </Tabs>
 
 
