--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,11 +1,12 @@
 # Getting Started
 
-The Clerk beta docs are a work in progress and currently focused on Next.js and we will continue to convert the rest of the docs to this format.
+The Clerk beta docs are a work in progress, you may find some rough edges or missing content. If you have any questions, please reach out to us on [Discord](https://discord.com/invite/b5rXHjAg7A).
 
 ## Quickstart Guides
 
 - #### [Next.js](/quickstarts/next/next)
 - #### [Next.js App Router](/quickstarts/next/next-beta)
+- #### [React](/quickstarts/react)
 
 ## Components
 - #### [Authentication](/components/authentication/sign-in)
