--- a/src/pages/components/authentication/sign-up.mdx
+++ b/src/pages/components/authentication/sign-up.mdx
@@ -94,7 +94,7 @@ All props below are optional.
       cells: ["afterSignInUrl", "string",  "The full URL or path to navigate after a successful sign in."]
     },
      {
-      cells: ["signUpUrl", "string",  "Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered."]
+      cells: ["signInUrl", "string",  "Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered."]
     },
      {
       cells: ["afterSignUpUrl", "string", "The full URL or path to navigate after a successful sign up."]
