--- a/src/pages/hooks/authentication/use-sign-up.mdx
+++ b/src/pages/hooks/authentication/use-sign-up.mdx
@@ -32,7 +32,7 @@ export default function SignUpStep() {
 }
 ```
 
-#### Sign in a user with a custom flow
+#### Sign up a user with a custom flow
 
 ```tsx copy filename="pages/signup.tsx"
 import { useSignUp } from "@clerk/nextjs";
