--- a/src/pages/quickstarts/expo.mdx
+++ b/src/pages/quickstarts/expo.mdx
@@ -15,17 +15,17 @@ Currently Clerk only works with Expo SDK 47 or lower. We are working on supporti
 
 <Tabs items={['npm', 'yarn', 'pnpm']}>
 <Tab>
-```
+```bash filename="" copy
 npm install @clerk/clerk-expo
 ```
 </Tab>
 <Tab>
-```
+```bash filename="" copy
 yarn add @clerk/clerk-expo
 ```
 </Tab>
 <Tab>
-```
+```bash filename="" copy
 pnpm i @clerk/clerk-expo
 ```
 </Tab>
@@ -39,15 +39,12 @@ Clerk requires your Expo application to be wrapped in the `<ClerkProvider/>` com
 ```tsx filename="app.tsx" copy
 import React from "react";
 import { Text } from "react-native";
-import { SafeAreaProvider } from "react-native-safe-area-context";
 import { ClerkProvider } from "@clerk/clerk-expo";
 
 export default function App() {
   return (
     <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-      <SafeAreaProvider>
         <Text>Hello world!</Text>
-      </SafeAreaProvider>
     </ClerkProvider>
   );
 }
