--- a/src/pages/quickstarts/expo.mdx
+++ b/src/pages/quickstarts/expo.mdx
@@ -15,17 +15,17 @@ Currently Clerk only works with Expo SDK 47 or lower. We are working on supporti
 
 <Tabs items={['npm', 'yarn', 'pnpm']}>
 <Tab>
-```bash filename="" copy
+```bash filename="your-project" copy
 npm install @clerk/clerk-expo
 ```
 </Tab>
 <Tab>
-```bash filename="" copy
+```bash filename="your-project" copy
 yarn add @clerk/clerk-expo
 ```
 </Tab>
 <Tab>
-```bash filename="" copy
+```bash filename="your-project" copy
 pnpm i @clerk/clerk-expo
 ```
 </Tab>
