--- a/src/pages/quickstarts/expo.mdx
+++ b/src/pages/quickstarts/expo.mdx
@@ -32,7 +32,7 @@ pnpm i @clerk/clerk-expo
 </Tabs>
 
 
-## Configure `<ClerkProvider>`
+## Mount `<ClerkProvider>`
 
 Clerk requires your Expo application to be wrapped in the `<ClerkProvider/>` component. The `<ClerkProvider />` component provides active session and user context to Clerk's hooks and other components.
 
@@ -70,11 +70,9 @@ export default function App() {
 }
 ```
 
-## Creating your sign in flows
-
 Using expo requires you to create custom flows in our quickstart guide, we are going to show you how to create a sign in and sign up flow using the `useSignIn` and `useSignUp` hooks.
 
-### Sign Up
+##Build Your Sign Up
 
 The examples below use email and password to sign a user up. You will notice that we have a conditonal flow in the sign up page for verifying a code, this is an important step as it verifies the user owns their email.
 
@@ -177,7 +175,7 @@ export default function SignUpScreen() {
 }
 ```
 
-### Sign In
+### Build Your Sign In=
 
 ```tsx filename="components/sign-in.tsx" copy
 import React from "react";
@@ -258,7 +256,7 @@ export default function App() {
 }
 ```
 
-### OAuth Login
+## OAuth Login
 
 If you want to add OAuth login flows to you Expo application, in most cases you want to be able to handle both sign in and sign up in a single flow. With Clerk we make this possible with transfers.
 
@@ -363,7 +361,7 @@ A token cache is important for persisting your JWT by default Clerk holds it in 
 
 #### Install expo-secure-store
 
-```bash copy
+```bash filename="your-project" copy
 npx expo install expo-secure-store
 ```
 ----
@@ -411,7 +409,7 @@ Clerk provides a set of hooks and helpers that you can use to access the active 
 
 The `useAuth` hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
 
-  ```tsx copy filename="pages/example.tsx"
+  ```tsx copy filename="example.tsx"
   import { useAuth } from '@clerk/clerk-expo';
 
   export default function Example() {
@@ -430,7 +428,7 @@ The `useAuth` hook is a convenient way to access the current auth state. This ho
 
 The `useUser` hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
 
-```tsx copy filename="pages/example.tsx"
+```tsx copy filename="example.tsx"
 import { useUser } from '@clerk/clerk-expo';
 
   export default function Example() {
