--- a/src/pages/quickstarts/nextjs/stable.mdx
+++ b/src/pages/quickstarts/nextjs/stable.mdx
@@ -17,17 +17,17 @@ Once you have a Next.js application ready, you need to install Clerk's Next.js S
 
 <Tabs items={['npm', 'yarn', 'pnpm']}>
 <Tab>
-```
+```bash filename="your-project" copy
 npm install @clerk/nextjs
 ```
 </Tab>
 <Tab>
-```
+```bash filename="your-project" copy
 yarn add @clerk/nextjs
 ```
 </Tab>
 <Tab>
-```
+```bash filename="your-project" copy
 pnpm i @clerk/nextjs
 ```
 </Tab>
