--- a/src/pages/quickstarts/react.mdx
+++ b/src/pages/quickstarts/react.mdx
@@ -13,17 +13,17 @@ Once you have a React application ready, you need to install Clerk's React SDK. 
 
 <Tabs items={['npm', 'yarn', 'pnpm']}>
 <Tab>
-```
+```bash filename="your-project" copy
 npm install @clerk/clerk-react
 ```
 </Tab>
 <Tab>
-```
+```bash filename="your-project" copy
 yarn add @clerk/clerk-react
 ```
 </Tab>
 <Tab>
-```
+```bash filename="your-project" copy
 pnpm i @clerk/clerk-react
 ```
 </Tab>
