--- a/src/pages/quickstarts/expo.mdx
+++ b/src/pages/quickstarts/expo.mdx
@@ -72,7 +72,7 @@ export default function App() {
 
 Using expo requires you to create custom flows in our quickstart guide, we are going to show you how to create a sign in and sign up flow using the `useSignIn` and `useSignUp` hooks.
 
-##Build Your Sign Up
+## Build Your Sign Up
 
 The examples below use email and password to sign a user up. You will notice that we have a conditonal flow in the sign up page for verifying a code, this is an important step as it verifies the user owns their email.
 
@@ -175,7 +175,7 @@ export default function SignUpScreen() {
 }
 ```
 
-### Build Your Sign In=
+### Build Your Sign In
 
 ```tsx filename="components/sign-in.tsx" copy
 import React from "react";
