some Expo changes

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -7,6 +7,7 @@ The Clerk beta docs are a work in progress, you may find some rough edges or mis
 - #### [Next.js](/quickstarts/next/next)
 - #### [Next.js App Router](/quickstarts/next/next-beta)
 - #### [React](/quickstarts/react)
+- #### [Expo](/quickstarts/expo)
 
 ## Components
 - #### [Authentication](/components/authentication/sign-in)
@@ -25,4 +26,3 @@ The Clerk beta docs are a work in progress, you may find some rough edges or mis
 ## How to help?
 
 We are always looking for help with the docs. If you see something that needs to be fixed or added, please open an issue or submit a PR.
-
