--- a/src/pages/quickstarts/expo.mdx
+++ b/src/pages/quickstarts/expo.mdx
@@ -38,19 +38,27 @@ Clerk requires your Expo application to be wrapped in the `<ClerkProvider/>` com
 
 ```tsx filename="app.tsx" copy
 import React from "react";
-import { Text } from "react-native";
-import { SafeAreaProvider } from "react-native-safe-area-context";
+import { SafeAreaView, Text,StyleSheet } from "react-native";
 import { ClerkProvider } from "@clerk/clerk-expo";
 
 export default function App() {
   return (
     <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-      <SafeAreaProvider>
+      <SafeAreaView style={styles.container}>
         <Text>Hello world!</Text>
-      </SafeAreaProvider>
+      </SafeAreaView>
     </ClerkProvider>
   );
 }
+
+const styles = StyleSheet.create({
+  container: {
+    flex: 1,
+    backgroundColor: '#fff',
+    alignItems: 'center',
+    justifyContent: 'center',
+  },
+});
 ```
 
 ## Protecting Your Pages
@@ -58,19 +66,31 @@ export default function App() {
 Clerk offers Control Components that allow you to protect your pages. In the example below we are using [`<SignedIn/>`](/components/user-management/signed-in) and [`<SignedOut/>`](components/user-management/signed-out)  control components.
 
 ```tsx filename="app.tsx" copy
-import { Text } from "react-native";
+import React from "react";
+import { SafeAreaView, Text,StyleSheet } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut } from "@clerk/clerk-expo";
 
 export default function App() {
   return (
     <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+     <SafeAreaView style={styles.container}>
       <SignedIn>
         <Text>You are Signed in</Text>
       </SignedIn>
       <SignedOut>You are Signed out</SignedOut>
+      </SafeAreaView>
     </ClerkProvider>
   );
 }
+
+const styles = StyleSheet.create({
+  container: {
+    flex: 1,
+    backgroundColor: '#fff',
+    alignItems: 'center',
+    justifyContent: 'center',
+  },
+});
 ```
 
 ## Creating your sign in flows
@@ -241,14 +261,15 @@ export default function SignInScreen(){
 Make sure you update your `app` file to use the components that you have created, to keep it simple we will just add the SignIn.
 
 ```tsx filename="app.tsx" copy
-import { SafeAreaView, Text } from "react-native";
+import React from "react";
+import { SafeAreaView, Text,StyleSheet } from "react-native";
 import { ClerkProvider,SignedIn,SignedOut } from "@clerk/clerk-expo";
 import SignInScreen from ".components/sign-in";
 
 export default function App() {
   return (
     <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-        <SafeAreaView>
+        <SafeAreaView styles={styles.container}>
         <SignedIn>
         <Text>You are Signed in</Text>
         </SignedIn>
@@ -259,6 +280,14 @@ export default function App() {
     </ClerkProvider>
   );
 }
+const styles = StyleSheet.create({
+  container: {
+    flex: 1,
+    backgroundColor: '#fff',
+    alignItems: 'center',
+    justifyContent: 'center',
+  },
+});
 ```
 
 ### OAuth Login
@@ -371,7 +400,8 @@ npx expo install expo-secure-store
 ```
 ----
 ```tsx filename="app.tsx" copy
-import { Text } from "react-native";
+import React from "react"
+import { SafeAreaView, Text,StyleSheet } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut } from "@clerk/clerk-expo";
 import * as SecureStore from "expo-secure-store";
 
@@ -397,13 +427,26 @@ const tokenCache = {
 export default function App() {
   return (
     <ClerkProvider tokenCache={tokenCache} publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-      <SignedIn>
-        <Text>You are Signed in</Text>
-      </SignedIn>
-      <SignedOut>You are Signed out</SignedOut>
-    </ClerkProvider>
-  );
+    <SafeAreaView styles={styles.container}>
+    <SignedIn>
+      <Text>You are Signed in</Text>
+    </SignedIn>
+    <SignedOut>
+      <SignIn/>
+    </SignedOut>
+  </SafeAreaView>
+</ClerkProvider>
+);
 }
+
+const styles = StyleSheet.create({
+  container: {
+  flex: 1,
+  backgroundColor: '#fff',
+  alignItems: 'center',
+  justifyContent: 'center',
+  },
+});
 ```
 
 ## Accessing Auth Data
